<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright The OpenZipkin Authors
    SPDX-License-Identifier: Apache-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>@project.groupId@</groupId>
  <artifactId>spring-webmvc-servlet25</artifactId>
  <version>@project.version@</version>
  <name>spring-webmvc-servlet25</name>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>@spring3.version@</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlet</artifactId>
      <version>@floor-jetty.version@</version>
    </dependency>

    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>brave-instrumentation-spring-webmvc</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>brave-instrumentation-http-tests</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>@junit-jupiter.version@</version>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>@assertj.version@</version>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>@mockito.version@</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>@log4j2.version@</version>
      <scope>test</scope>
    </dependency>
    <!-- Spring uses commons logging -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-jcl</artifactId>
      <version>@log4j2.version@</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>@project.build.testSourceDirectory@</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>@maven-compiler-plugin.version@</version>
        <configuration>
          <includes>
            <include>**/ITTracingHandlerInterceptor*.java</include>
            <include>**/BaseITSpanCustomizingHandlerInterceptor*.java</include>
            <include>**/Servlet25TestController*.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <!-- Use surefire to run the ITs until someone figures out how to get invoker to run
             failsafe -->
        <artifactId>maven-surefire-plugin</artifactId>
        <version>@maven-surefire-plugin.version@</version>
        <configuration>
          <failIfNoTests>true</failIfNoTests>
          <includes>
            <include>**/IT*.java</include>
          </includes>
          <!-- Ensure scope leak cause ends up in the console -->
          <trimStackTrace>false</trimStackTrace>
          <!-- add opens for old spring to avoid below in JRE 21:
               Could not initialize class org.springframework.cglib.proxy.Enhancer -->
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
